--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,11 @@
       src="background.png"
     />
     <main class="flex flex-1 flex-col justify-center gap-10 px-2">
-      <img class="mx-auto" src="header-logo.png" alt="Logo da construtora" />
+      <img
+        class="mx-auto h-64 object-cover"
+        src="header-logo.png"
+        alt="Logo da construtora"
+      />
       <section class="flex flex-col items-center gap-2">
         <h1 class="text-4xl font-black uppercase">Bem-vindo!</h1>
         <h2 class="px-2 text-center">
