--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       <section class="grid grid-cols-2 text-lg">
         <a
           class="flex flex-col items-center gap-3"
-          href="https://www.dropbox.com/scl/fi/i00y9c1qdw896ao1v872d/SMP-SER-06-01-ENG-MAN-PRO.pdf?rlkey=yhl34vv56n0v0d8ts1z3dnq01&st=ci4x2cfd&dl=0"
+          href="https://www.dropbox.com/scl/fi/m3wwk7i71prewai5m3rvs/SMP-SER-06-01-ENG-MAN-PRO-REV01.pdf?rlkey=g0scxpi0cp4pa68ba9nvlaas3&st=4qi6439z&dl=0"
         >
           <div
             class="flex size-24 items-center justify-center rounded-full bg-primary-contrast shadow-custom-inner"
